kustomize/dargindesktop/n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: n8n
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: n8n
    spec:
      containers:
        - env:
            - name: N8N_HOST
              value: local.podrujkashop.ru
            - name: N8N_PORT
              value: "5678"
            - name: SUBFOLDER
              value: "n8n"
            - name: N8N_PATH
              value: "/n8n/"
            - name: N8N_PROTOCOL
              value: http
            - name: NODE_ENV
              value: production
            - name: WEBHOOK_URL
              value: https://local.podrujkashop.ru/n8n
          image: docker.n8n.io/n8nio/n8n
          name: n8nd
          ports:
            - containerPort: 5678
          resources: {}
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-pvc
      restartPolicy: Always
      volumes:
        - name: n8n-pvc
          persistentVolumeClaim:
            claimName: n8n-pvc
