kustomize/dargindesktop/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: n8n
  name: n8n-svc
spec:
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
  selector:
    io.kompose.service: n8n
status:
  loadBalancer: {}
